--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .mauve {
   display: flex;
-  padding: 5px;
+  padding: 8px;
   align-items: center;
   justify-content: center;
   background-color: purple;
@@ -21,12 +21,49 @@ body {
   background-color: lightgreen;
   color: white;
   text-transform: uppercase;
+  border-radius: 5px;
 }
 
 nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: 1px solid lightgrey;
+  text-transform: uppercase;
+}
+nav .logo, nav .coworking {
+  flex: 1;
+}
+nav .navigation {
+  flex: 3;
+}
+nav .navigation li {
+  display: inline;
+  list-style: none;
+  margin: 0 7px;
+}
+nav .logo img {
+  height: 100px;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+  position: relative;
+}
+nav a ::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: 2s;
+  transform: scaleX(0);
+}
+nav a ::before ::hover {
+  transform: scaleX(1);
+  color: blue;
 }
 
 /*# sourceMappingURL=style.css.map */
