--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,7 +5,7 @@ body
     
 .mauve 
     display: flex
-    padding: 5px
+    padding: 8px
     align-items: center
     justify-content: center
     background-color: purple
@@ -22,8 +22,51 @@ body
             background-color: lightgreen
             color: white
             text-transform: uppercase
+            border-radius: 5px
 
 nav 
     display: flex
     align-items: center
     justify-content: center
+    border-bottom: 1px solid lightgrey
+    text-transform: uppercase
+
+    .logo, .coworking
+        flex: 1
+
+    .navigation
+        flex: 3
+
+        li
+            display: inline
+            list-style: none
+            margin: 0 7px
+
+    .logo 
+        img
+            height: 100px
+
+    a 
+        text-decoration: none
+        color: black
+        position: relative
+
+
+        ::before
+            content: ""
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 2px
+            background-color: black
+            transition: 2s
+            transform: scaleX(0)
+
+            ::hover
+                transform: scaleX(1)
+                color: blue
+
+
+
+
