--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,9 +1,8 @@
-body 
+body
     margin: 0
     font-family: 'Ubuntu', sans-serif
 
-    
-.mauve 
+.mauve
     display: flex
     padding: 8px
     align-items: center
@@ -16,7 +15,7 @@ body
         position: absolute
         left: 10px
         height: 45px
-    
+
     form
         button
             background-color: lightgreen
@@ -24,7 +23,7 @@ body
             text-transform: uppercase
             border-radius: 5px
 
-nav 
+nav
     display: flex
     align-items: center
     justify-content: center
@@ -36,37 +35,34 @@ nav
 
     .navigation
         flex: 3
+        ul
+            padding: 0
+            display: flex
+            justify-content: center
+            li
+                list-style: none
+                margin: 0 7px
 
-        li
-            display: inline
-            list-style: none
-            margin: 0 7px
+                a
+                    text-decoration: none
+                    color: black
+                    max-width: max-content
+                    position: relative
+                    
+                    &:before
+                        content: " "
+                        position: absolute
+                        bottom: 0
+                        width: 100%
+                        height: 1px
+                        background-color: black
+                        transition: 2s
+                        transform: scaleX(0)
 
-    .logo 
+                    &:hover
+                        &:before
+                            transform: scaleX(1)
+
+    .logo
         img
             height: 100px
-
-    a 
-        text-decoration: none
-        color: black
-        position: relative
-
-
-        ::before
-            content: ""
-            position: absolute
-            bottom: 0
-            left: 0
-            width: 100%
-            height: 2px
-            background-color: black
-            transition: 2s
-            transform: scaleX(0)
-
-            ::hover
-                transform: scaleX(1)
-                color: blue
-
-
-
-
