--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,10 @@ nav {
   border-bottom: 1px solid lightgrey;
   text-transform: uppercase;
 }
+nav .coworking a {
+  text-decoration: none;
+  color: black;
+}
 nav .logo, nav .coworking {
   flex: 1;
 }
@@ -67,6 +71,53 @@ nav .navigation ul li a:hover:before {
 }
 nav .logo img {
   height: 100px;
+}
+
+section {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+section ul li {
+  padding: 10px;
+}
+
+section:nth-of-type(2) {
+  margin: 20px 0;
+}
+section:nth-of-type(2) h2 {
+  font-size: 30px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: grey;
+}
+footer .reseaux ul li {
+  list-style: none;
+  display: inline;
+  padding: 0 60px;
+}
+footer .reseaux ul li a {
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  padding: 1px;
+}
+footer .copy {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+footer .copy img {
+  width: 50%;
+  padding: 20px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
