--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -30,6 +30,12 @@ nav
     border-bottom: 1px solid lightgrey
     text-transform: uppercase
 
+    .coworking
+        a
+            text-decoration: none
+            color: black
+
+
     .logo, .coworking
         flex: 1
 
@@ -66,3 +72,56 @@ nav
     .logo
         img
             height: 100px
+
+// section 1
+
+section
+    margin: 20px 0
+    display: flex
+    justify-content: center
+    flex-direction: column
+    align-items: center
+
+    ul
+        li
+            padding: 10px
+
+// section 2
+
+section
+    &:nth-of-type(2)
+        margin: 20px 0
+        h2
+            font-size: 30px
+
+        
+// footer
+
+footer
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    background-color: grey
+
+    .reseaux
+        ul
+            li
+                list-style: none
+                display: inline
+                padding: 0 60px
+
+                a
+                    text-decoration: none
+                    color: white
+                    text-transform: uppercase
+                    padding: 1px
+
+    .copy
+        display: flex
+        align-items: center
+        flex-direction: column
+        justify-content: center
+        img
+            width: 50%
+            padding: 20px 0
